# Estrutura-de-Dados

./: .gitignore  CMakeLists.txt  README.md  atv1_estrutura_pilha.c  atv2_fila_petshop.c  ex1_alocacao_inteiro.c  ex2_semaforo.c  ex5_vetor_dinamico.c  ex7.struct_notas.c  ex_pilha_processos_so.c  quest4_pilha.c  quest5_fila.c  quest9_pilha.c
Pilhas e Filas/: ex1_pilha-livros.c
Ponteiros e Alocacao Dinamica/: ex_01-ponteiro-alocacao.c  ex_02-semaforo.c  ex_05-vetor-dinamico.c
